--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/build_lets_webgl.loader.js";
       var config = {
-        dataUrl: buildUrl + "/build_lets_webgl.data.gz",
-        frameworkUrl: buildUrl + "/build_lets_webgl.framework.js.gz",
-        codeUrl: buildUrl + "/build_lets_webgl.wasm.gz",
+        dataUrl: buildUrl + "/build_lets_webgl.data",
+        frameworkUrl: buildUrl + "/build_lets_webgl.framework.js",
+        codeUrl: buildUrl + "/build_lets_webgl.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "LetsWebGL",
